# fx-algo-trader

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  POST_DRAFT.md  README.md  RESEARCH.md  pyproject.toml
configs/: backtest_3month_h1.yaml  backtest_example.yaml  backtest_multi_symbol.yaml  backtest_new_features.yaml  backtest_no_rsi.yaml  backtest_optimized.yaml  mt5_demo.example.yaml  mt5_demo.yaml  paper_example.yaml  walkforward_example.yaml
scripts/: carry_basket.py  carry_momentum.py  convert_qdatamanager.py  download_mt5_history.py  download_rates.py  download_yfinance.py  download_yfinance_d1.py  edge_hour_of_day.py  edge_research.py  edge_research_h1.py  edge_verify.py  edge_xasset.py  parse_bis_rates.py
src/fx_trading/: __init__.py  cli.py
src/fx_trading/backtesting/: __init__.py  engine.py  walkforward.py
src/fx_trading/config/: __init__.py  models.py
src/fx_trading/costs/: __init__.py  models.py
src/fx_trading/data/: __init__.py  economic_calendar.py  ingestion.py  synthetic.py  validation.py
src/fx_trading/execution/: __init__.py  broker.py  live_broker_stub.py  mt5_broker.py  mt5_client.py  mt5_zmq_client.py  paper_broker.py
src/fx_trading/monitoring/: __init__.py  logging.py  reports.py
src/fx_trading/notifications/: __init__.py  telegram.py
src/fx_trading/portfolio/: __init__.py  accounting.py  position_sizing.py
src/fx_trading/risk/: __init__.py  engine.py  news_filter.py
src/fx_trading/strategies/: __init__.py  base.py  mean_reversion.py  volatility_breakout.py
src/fx_trading/trading/: __init__.py  live_runner.py  position_manager.py  safety.py
src/fx_trading/types/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_backtester.py  test_costs.py  test_data_validation.py  test_integration.py  test_news_filter.py  test_position_manager.py  test_position_sizing.py  test_risk_engine.py  test_strategies.py
